--- a/server/config.default.json
+++ b/server/config.default.json
@@ -4,5 +4,6 @@
     "twitch_channel_id": "",
     "db_file_name": "database.db",
     "api_host": "localhost",
-    "api_port": "8000"
+    "api_port": "8000",
+    "client_total_time": 30000
 }
