--- a/server/config.default.json
+++ b/server/config.default.json
@@ -5,5 +5,7 @@
     "db_file_name": "database.db",
     "api_host": "localhost",
     "api_port": "8000",
-    "client_total_time": 30000
+    "client_total_time": 60000,
+    "client_show_followers": true,
+    "client_show_subscribers": true
 }
