--- a/server/config.default.json
+++ b/server/config.default.json
@@ -1,3 +1,7 @@
 {
-    "mongo_db": ""
+    "mongo_db_host": "localhost",
+    "mongo_db_port": "27017",
+    "mongo_db_database": "twitch_eos_thanks",
+    "api_host": "0.0.0.0",
+    "api_port": "8000"
 }
