--- a/app/config.default.json
+++ b/app/config.default.json
@@ -7,7 +7,8 @@
     "api_port": "8000",
     "codephobia_api_host": "api.codephobia.com",
     "codephobia_api_port": "80",
-    "client_total_time": 60000,
+    "client_time_total": 60000,
+    "client_time_per": 500,
     "client_show_followers": true,
     "client_show_subscribers": true,
     "client_show_current_stream": true
